--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "firststeps",
+  "name": "coding40-node",
   "version": "1.0.0",
-  "description": "First steps with Node.js",
-  "main": "main.js",
+  "description": "My 1st steps with node.js - a goal is to manage a quiz-database remotely",
+  "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LukaszLebioda/Coding40-Node.js.git"
+  },
+  "keywords": [
+    "database",
+    "node.js",
+    "quiz"
+  ],
   "author": "Łukasz Lebioda",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LukaszLebioda/Coding40-Node.js/issues"
+  },
+  "homepage": "https://github.com/LukaszLebioda/Coding40-Node.js#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "firststeps": "^1.0.0",
-    "legalitychecker": "^1.0.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "npx": "^3.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3"
   }
 }
