--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "nodemailer": "^6.8.0",
-    "nodemailer-mailgun-transport": "^2.1.5"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
